# Blaze-Robotics

./: controller.cpp
Balancing Robot Project/Altium/Balancing Robot/: 1734598-4.IntLib  A4988_STEPPER_MOTOR_DRIVER_CARRIER.IntLib  ARDUINO_UNO_REV3.IntLib  Balancing Robot.PrjPcb  GY-521.IntLib  (+2 more)
Balancing Robot Project/CAD/: gazeboBox.SLDPRT  gazeboMockup.SLDASM  gazeboWheel.SLDPRT  wheelRim.SLDPRT  wheelTire.SLDPRT
Balancing Robot Project/PIDArduino/: PIDArduino.ino
Balancing Robot Project/SFML_PID/: SFML_PID.cpp
Balancing Robot Project/gazebo/: CMakeLists.txt  PIDControl.cc  model.sdf
Buck Converter Altium/Thunderbots Buck Converter/: Thunderbots.PcbDoc
Color Camera/: main.py  test.py  util.py
Contour Detection/: ContourColor.py  contourImage.py  util.py
Turret CAD/: Base.SLDPRT  Full Assembly.SLDASM  NemesisFlywheelMockup.SLDPRT  PrototypeBoard.SLDPRT  PrototypeBoard.STEP  PrototypeBoard2.SLDPRT  PrototypeBoard2.STEP
Turret CAD/Base/: Base Assembly.SLDASM  Base Wheel.SLDPRT  Base.SLDPRT  GearFitTest.STEP  GearMotor.SLDPRT  GearMotor.STEP  GearPlate.SLDPRT  Nema17.SLDPRT
Turret CAD/Shooting Mechanism/: Ball Model.SLDPRT  BallLoadGear.SLDPRT  BallLoadGear.STEP  BallMagazine.SLDPRT  BallMagazine.STEP  PrototypeFlywheelCover.SLDPRT  PrototypeFlywheelCover.STEP
Turret Project/: controller.cpp
Turret Project/Turret CAD/: Full Assembly.SLDASM  PrototypeBoard.SLDPRT  PrototypeBoard2.SLDPRT
Turret Project/Turret Software/: cameraAim.py  cameraDir.py  motorMover.py
Turret Project/motorMoving/: motorMoving.ino
Turret Python Software/: main.py
(+39 files in other folders)
